MDEV-19468 Hybrid type expressions return wrong format for FLOAT